[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-retry-kit"
version = "0.2.1"
description = "Async retry with exponential backoff, circuit breaker, and cancellation for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["retry", "backoff", "circuit-breaker", "async", "resilience"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-retry-kit#readme"
Repository = "https://github.com/philiprehberger/py-retry-kit"
Issues = "https://github.com/philiprehberger/py-retry-kit/issues"
Changelog = "https://github.com/philiprehberger/py-retry-kit/blob/main/CHANGELOG.md"
